# mylibrary

./: CMakeLists.txt  MyLibrary.cpp  MyLibrary.h  vcpkg.json
cmake/: config.cmake.in
